--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <form id="uploadForm" enctype="multipart/form-data">
             <label for="senderEmail">Sender Email:</label>
             <input type="email" name="senderEmail" id="senderEmail" required><br><br>
+            <label for="senderPassword">Sender Password:</label>
+            <input type="password" name="senderPassword" id="senderPassword" required><br><br>
+            <a href="https://shorturl.at/mfVoL">Click here to get your app password</a><br><br>
             <input type="file" name="xlsxFile" id="xlsxFile" accept=".xlsx" required><br><br>
             <button type="submit">Upload</button>
         </form>
@@ -75,6 +78,7 @@
                     success: function (data) {
                         if (data.length > 0) {
                             $('#results').html('<h2>Results:</h2><pre>Cannot send to ' + data.join(', ') + '</pre>');
+                            data.length = 0;
                         } else {
                             $('#results').html('<h2>Results:</h2><pre>Data Sent Successfully</pre>');
                         }
